[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/DynamicBlock.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/grassHalf_mid.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/planetHalf_mid.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/sandHalf_mid.png" type="Texture" id=4]
[ext_resource path="res://scenes/Particles/FreezeParticles.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 2 )

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 1 )
freezer_img = ExtResource( 2 )
spikes_img = ExtResource( 3 )
jumper_img = ExtResource( 4 )
freeze_particles = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 0.46, 0.4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="InteractionCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -17.5 )
shape = SubResource( 2 )

[node name="FreezeTimer" type="Timer" parent="."]

[node name="ParticleSpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, -17.5 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
